CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET (PROJECT testjson)
PROJECT (${PROJECT})

SET (PACKAGE_NAME ${PROJECT})
SET (CMAKE_INSTALL_PREFIX "/usr")
SET (PACKAGE_VERSION "0.0.1")
SET (PACKAGE_STRING "${PACKAGE_NAME}-${PACKAGE_VERSION}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

FILE (GLOB SOURCES 
                  ${CMAKE_CURRENT_SOURCE_DIR}/json/*.cpp
                  ${CMAKE_CURRENT_SOURCE_DIR}/example/${PROJECT}.cpp
     )

ADD_DEFINITIONS(-Wall)
ADD_DEFINITIONS(-g3)
ADD_DEFINITIONS(-pg)
ADD_DEFINITIONS(-pg)
ADD_DEFINITIONS(-O2)
ADD_DEFINITIONS(-std=c++11)

#    SET (CMAKE_C_FLAGS  "-g -Wall -Ofast -std=c++11")
#    SET (CMAKE_CXX_FLAGS "-g -Wall -Ofast -std=c++11 -DCHECK_ARRAY_RANGE -DDEBUG")

ADD_EXECUTABLE (${PROJECT}  ${SOURCES})

